# scipy-tutorials

./: README.md  numpy_tutorial.ipynb  pyproject.toml  xarray_tutorial.ipynb
