[tool.poetry]
name = "scipy-tutorials"
version = "0.1.0"
description = ""
authors = ["Darren Weber <dweber.consulting@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"

numpy = "^1.22.2"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
xarray = "^0.21.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
